--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -5,25 +5,27 @@ page-home {
         ion-card {
           position: relative;
           text-align: center;
+
+          &:after{
+            content: "";
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            background: rgba(0, 0, 0, 0.2);
+          }
         }
       
         .card-title {
           position: absolute;
-          top: 36%;
-          font-size: 2.0em;
+          bottom: 0px;
+          font-size: 1.6em;
           width: 100%;
+          z-index: 1000;
           font-weight: bold;
           color: #fff;
-        }
-      
-        .card-subtitle {
-          font-size: 1.0em;
-          position: absolute;
-          top: 52%;
-          width: 100%;
-          color: #fff;
-        }
-      
+        }      
       }
 
 }
